# Yefai

./: .gitignore  .pre-commit-config.yaml  README.md  Snakefile  package-lock.json  package.json  pnpm-lock.yaml  pytest.ini  yefai-architecture.html
.agent/: DESIGN.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  gelecek-tahmini-plani.md  image-model-training-plan.md  yedek-parca-krizi-mock-plan.md
client/: package-lock.json  package.json  pnpm-lock.yaml
server/: README.md  Snakefile  errors.py  main.py  pyproject.toml  requirements.txt  server_logs.txt  server_logs2.txt  server_logs3.txt
server/.snakemake/iocache/: latest.pkl
server/ai/: __init__.py
server/ai/anomalib/: __init__.py  compute_stats.py  dataset.py  export.py  inference.py  train.py  wear_classifier.py
server/ai/embeddings/: __init__.py  batch_embed.py  model.py  search.py
server/ai/langchain/: analyzer.py  prompts.py
server/ai/novavision/: __init__.py  cli.py  config.py  deploy.py  image_request.py  inference.py  lifecycle.py  models.py  preprocessing.py  schemas.py
server/ai/prediction/: __init__.py  calibration.py  chart.py  projection.py  scenarios.py  trends.py  wear_rate.py
server/ai/puqai/: __init__.py  client.py  config.py  fallback.py  retry.py  schemas.py  template_engine.py
server/ai/puqai/templates/: email_report.j2  po_notification.j2  sms_critical.j2  spare_parts_crisis.j2  telegram_anomaly.j2
server/auth/: __init__.py  dependencies.py  models.py  permissions.py
server/db/: client.py  config.py  run_migration.py
server/db/migrations/: 001_initial_schema.sql  002_webhook_logs.sql  003_prediction_fields.sql  004_multi_org.sql  004_similarity_search.sql  005_support_tickets_and_files.sql  006_chat_tables.sql  007_spare_parts_crisis.sql  008_notifications.sql  009_dashboard_anomalies.sql  010_rls_policies.sql  011_fix_rls.sql
server/docs/: nova-rag-langchain-puq-pipeline.md
server/etl/: generate_mock_spare_parts.py  parse_labels.py  parse_sensors.py  seed_database.py  split_data.py  unzip_data.py
server/middleware/: logging.py  org_context.py
server/routers/: __init__.py  admin.py  anomalib.py  anomalies.py  auth.py  chat.py  dashboard.py  embeddings.py  files.py  health.py  members.py  notifications.py  novavision.py  organizations.py  predictions.py  spare_parts.py
server/scripts/: seed_predictions.py
server/scripts/seed/: seed.js
server/services/: __init__.py  anomalib_service.py  auth_service.py  chat_service.py  crisis_service.py  dashboard_service.py  embedding_service.py  file_service.py  notification_service.py  novavision_service.py  org_service.py  prediction_service.py  purchase_order_service.py  spare_parts_workflow_service.py  supplier_service.py  vector_search_service.py
server/tests/: api.test.js
(+225 files in other folders)
