[project]
name = "yefai-server"
version = "0.1.0"
description = "Yefai Predictive Maintenance Platform - Backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "supabase>=2.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.14.1",
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "transformers>=4.45.0",
    "pillow>=10.0.0",
    "anomalib>=1.1.0",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.6.0",
    "snakemake>=8.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["../.agent/", "../.planning/", "../.github/", "../client/", "../graphify-out/", "../llm_docs/"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line too long (handled by formatter)
    "B008", # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["etl", "db", "routers", "services", "ai", "ai.anomalib", "ai.embeddings"]

[tool.ruff.format]
line-ending = "lf"
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
explicit_package_bases = true
exclude = ["tests/", "../.agent/", "../.planning/", "../client/", "../graphify-out/", "../llm_docs/"]

[tool.pytest.ini_options]
testpaths = ["../tests"]
pythonpath = ["."]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "live: marks tests that need live Supabase connection",
]
